[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/L0_train/sunflower_road/sunflower_tile.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/L0_train/sunflower_road/cloud_tile_big-min.png" type="Texture" id=3]
[ext_resource path="res://BG.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/21.0 Train/SunflowerRoadHouse.gd" type="Script" id=5]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/21.0 Train/parallax_clouds.gd" type="Script" id=7]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/21.0 Train/sunflower_house.tscn" type="PackedScene" id=9]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/L0_train/sunflower_road/cypress_02-min.png" type="Texture" id=11]
[ext_resource path="res://sprites/L0_train/sunflower_road/cypress_01-min.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 101.19, 1203.33 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 71.0704, 1381.9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28977, 136.173 )

[node name="SunflowerRoad" type="Node2D"]
position = Vector2( -2.09241, -4.18497 )
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="BG2" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_left = -918.708
margin_top = -896.513
margin_right = 3044.29
margin_bottom = 2153.49

[node name="bg" type="Node2D" parent="."]

[node name="sunflowers" type="TextureRect" parent="bg"]
margin_left = -1799.06
margin_top = 889.155
margin_right = 22698.9
margin_bottom = 1294.16
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sunflowers2" type="TextureRect" parent="bg"]
margin_left = -1615.91
margin_top = 872.185
margin_right = 22882.1
margin_bottom = 1277.19
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sunflowers3" type="TextureRect" parent="bg"]
margin_left = -8789.57
margin_top = 855.214
margin_right = 15708.4
margin_bottom = 1260.22
rect_scale = Vector2( 0.789269, 0.789269 )
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cypress_01-min" type="Sprite" parent="bg"]
position = Vector2( 745.977, 793.83 )
texture = ExtResource( 12 )

[node name="cypress_02-min" type="Sprite" parent="bg"]
position = Vector2( 576.271, 796.658 )
texture = ExtResource( 11 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="clouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 1920, 0 )
script = ExtResource( 7 )
CLOUD_SPEED = 10.0

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/clouds"]
margin_left = -2203.0
margin_top = 435.527
margin_right = 4247.0
margin_bottom = 1269.53
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PuppyCamera" parent="." instance=ExtResource( 10 )]
position = Vector2( 937.55, 830.475 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( 0, 319.612 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1879.2, 1350.18 )

[node name="YSort" type="YSort" parent="."]
position = Vector2( 44, 16 )

[node name="player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 985.894, 1265.74 )
camera = NodePath("../../PuppyCamera")

[node name="house" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 1210.71, 1053.64 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -3.17896, 6.35803 )

[node name="TopSpawnPoint" parent="." instance=ExtResource( 6 )]
position = Vector2( 1247.62, 1170.12 )

[node name="BottomSpawnPoint" parent="." instance=ExtResource( 6 )]
position = Vector2( 56.3494, 1168.77 )

[node name="LowerTZ" parent="." instance=ExtResource( 8 )]
position = Vector2( -121.437, 1084.54 )

[node name="CollisionShape2D" parent="LowerTZ" index="0"]
position = Vector2( 10.0398, 6.69312 )
shape = SubResource( 1 )

[node name="UpperTZ" parent="." instance=ExtResource( 8 )]
position = Vector2( 2137.31, 972.109 )

[node name="CollisionShape2D" parent="UpperTZ" index="0"]
position = Vector2( -197.99, -240.416 )
shape = SubResource( 2 )

[node name="cypress_01-min2" type="Sprite" parent="."]
position = Vector2( 1714.71, 817.164 )
texture = ExtResource( 12 )

[node name="cypress_02-min" type="Sprite" parent="."]
position = Vector2( 1829.26, 800.194 )
texture = ExtResource( 11 )

[node name="sunflower_tile2" type="Sprite" parent="."]
modulate = Color( 0.631373, 0.560784, 0.431373, 1 )
position = Vector2( 921.06, 1080.73 )
texture = ExtResource( 1 )

[node name="TopCollision" type="StaticBody2D" parent="."]
position = Vector2( 697.171, 1003.17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCollision"]
shape = SubResource( 3 )

[node name="BottomCollision" type="StaticBody2D" parent="."]
position = Vector2( 658.586, 1352.57 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomCollision"]
position = Vector2( 0, -1.68188 )
shape = SubResource( 3 )

[connection signal="transition_triggered" from="LowerTZ" to="." method="_on_LowerTZ_transition_triggered"]
[connection signal="transition_triggered" from="UpperTZ" to="." method="_on_UpperTZ_transition_triggered"]

[editable path="PuppyCamera"]
[editable path="LowerTZ"]
[editable path="UpperTZ"]
